feat: title of project altered

--- a/gmf/src/main/webapp/i18n/en/login.json
+++ b/gmf/src/main/webapp/i18n/en/login.json
@@ -1,6 +1,6 @@
 {
   "login": {
-    "title": "Sign in",
+    "title": "Entrar - Guia do Mochileiro Fatecano",
     "form": {
       "password": "Password",
       "password.placeholder": "Your password",
