--- a/gmf/src/main/webapp/i18n/en/register.json
+++ b/gmf/src/main/webapp/i18n/en/register.json
@@ -1,6 +1,6 @@
 {
   "register": {
-    "title": "Registration",
+    "title": "Cadastrar - Guia do Mochileiro Fatecano",
     "form": {
       "button": "Register"
     },
